[package]
name = "haze"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Networking
libp2p = { version = "0.53", features = ["tcp", "tokio", "noise", "yamux", "macros", "ping", "request-response"] }
libp2p-request-response = "0.26"
multiaddr = "0.18"

# WASM runtime
wasmtime = "15.0"

# Database
sled = "0.34"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
bytes = "1.5"

# HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
bytes = "1.5"
tower = { version = "0.4", features = ["util"] }
